# pacman-glib

./: AUTHORS  MAINTAINERS  Makefile.am  autogen.sh  configure.ac  gpacman-3.3.pc.in  pacman-glib.pc.in
docs/: Makefile.am  gpacman-docs.sgml  gpacman-docs.sgml.in  gpacman-sections.txt  pacman-glib-docs.sgml.in  pacman-glib-sections.txt
lib/: Makefile.am  gpacman.h  pacman-config.c  pacman-conflict.c  pacman-conflict.h  pacman-database.c  pacman-database.h  pacman-delta.c  pacman-delta.h  pacman-dependency.c  pacman-dependency.h  pacman-enum.c.template  pacman-error.c  pacman-error.h  pacman-file-conflict.c  pacman-file-conflict.h  pacman-group.c  pacman-group.h  pacman-install.c  pacman-install.h  pacman-list.c  pacman-list.h  pacman-manager.c  pacman-manager.h  pacman-marshal.list  pacman-missing-dependency.c  pacman-missing-dependency.h  pacman-modify.c  pacman-modify.h  pacman-package.c  pacman-package.h  pacman-private.h  pacman-remove.c  pacman-remove.h  pacman-sync.c  pacman-sync.h  pacman-transaction.c  pacman-transaction.h  pacman-types.h  pacman-update.c  (+2 more)
pk-backend/: pk-make  pk-quit  pk-start
pk-backend/a/: ChangeLog  Makefile.in  aclocal.m4
pk-backend/a/backends/alpm/: Makefile.in
pk-backend/a/backends/apt/: Makefile.in
pk-backend/a/backends/box/: Makefile.in
pk-backend/a/backends/conary/: Makefile.in
pk-backend/a/backends/opkg/: Makefile.in
pk-backend/a/backends/pisi/: Makefile.in
pk-backend/a/backends/poldek/: Makefile.in
pk-backend/a/backends/portage/: Makefile.in
pk-backend/a/backends/smart/: Makefile.in
pk-backend/a/backends/urpmi/: Makefile.in
pk-backend/a/backends/urpmi/helpers/: Makefile.in
pk-backend/a/backends/yum/: Makefile.in
pk-backend/a/contrib/: Makefile.in
pk-backend/a/contrib/command-not-found/: Makefile.in
pk-backend/a/contrib/debuginfo-install/: Makefile.in
pk-backend/a/contrib/gtk-module/: Makefile.in
pk-backend/a/contrib/ruck/src/: Makefile.in
pk-backend/a/contrib/yum-packagekit/: Makefile.in
pk-backend/a/data/tests/: Makefile.in
pk-backend/a/docs/api/: Makefile.in  PackageKit-sections.txt
pk-backend/a/docs/api/dbus/: Makefile.in  org.freedesktop.PackageKit.Transaction.ref.xml  org.freedesktop.PackageKit.ref.xml
pk-backend/a/docs/api/html/: PackageKit-pk-common.html  PackageKit-pk-package-id.html  PackageKit-pk-package-ids.html  PackageKit.devhelp2  PackageKit.html  PkClient.html  PkControl.html  PkDetails.html  PkDistroUpgrade.html  PkError.html  PkFiles.html  PkMessage.html  PkPackage.html  PkPackageSack.html  PkRepoDetail.html  PkRequireRestart.html  PkResults.html  PkServicePack.html  PkUpdateDetail.html  backend-compiled.html  backends-spawn-methods.html  concepts.html  index.sgml  introduction-backends.html  introduction-ideas-filters.html  introduction-ideas-simultaneous.html  introduction-ideas-status.html  introduction.html  libpackagekit-helpers.html  specification.html
pk-backend/a/docs/api/tmpl/: PackageKit-unused.sgml  egg-string.sgml  packagekit.sgml  pk-client.sgml  pk-error.sgml  pk-eula-required.sgml  pk-files.sgml  pk-package-ids.sgml  pk-package-sack-sync.sgml  pk-progress-bar.sgml  pk-repo-signature-required.sgml  pk-source.sgml  pk-task-text.sgml  pk-task-wrapper.sgml  pk-transaction-list.sgml  pk-transaction-past.sgml  pk-update-detail.sgml  pk-version.sgml
pk-backend/a/docs/html/: Makefile.in
pk-backend/a/docs/html/img/: Makefile.in
pk-backend/a/docs/html/videos/: Makefile.in
pk-backend/a/lib/: Makefile.in
pk-backend/a/lib/packagekit-glib2/: Makefile.in  PackageKitGlib-1.0.gir  pk-version.h
pk-backend/a/lib/packagekit-qt/: Makefile.in
pk-backend/a/lib/packagekit-qt/src/: Makefile.in
pk-backend/a/lib/packagekit-sharp/: Makefile.in
pk-backend/a/lib/python/: Makefile.in
pk-backend/a/lib/python/packagekit/: Makefile.in  enums.py
pk-backend/a/policy/: Makefile.in  org.freedesktop.packagekit.policy
pk-backend/a/src/: pk-marshal.c
pk-backend/b/: config.h  config.h.in  configure  configure.ac
pk-backend/b/backends/: Makefile.am  Makefile.in
pk-backend/b/backends/alpm/: Makefile.am  TODO  pk-backend-alpm.c
pk-backend/b/backends/aptcc/: Makefile.in
pk-backend/b/backends/dummy/: Makefile.in
pk-backend/b/backends/pacman-glib/: Makefile.am  TODO  pk-backend-pacman-glib.c
pk-backend/b/backends/ports/: Makefile.in
pk-backend/b/backends/ports/ruby_packagekit/: Makefile.in
pk-backend/b/backends/razor/: Makefile.in
pk-backend/b/backends/slapt/: Makefile.in
pk-backend/b/backends/test/: Makefile.in
pk-backend/b/backends/test/helpers/: Makefile.in
pk-backend/b/backends/zypp/: Makefile.in
pk-backend/b/client/: Makefile.in
pk-backend/b/contrib/browser-plugin/: Makefile.in
pk-backend/b/contrib/command-not-found/: PackageKit.sh
pk-backend/b/contrib/cron/: Makefile.in
pk-backend/b/contrib/device-rebind/: Makefile.in
pk-backend/b/contrib/gstreamer-plugin/: Makefile.in
pk-backend/b/contrib/pm-utils/: Makefile.in
pk-backend/b/contrib/ruck/: Makefile.in
pk-backend/b/data/: Makefile.in
pk-backend/b/docs/: Makefile.in
pk-backend/b/docs/api/: PackageKit.types
pk-backend/b/docs/api/html/: PackageKit-egg-debug.html  PackageKit-pk-bitfield.html  PackageKit-pk-client-sync.html  PackageKit-pk-control-sync.html  PackageKit-pk-enum.html  PackageKit.devhelp  PkCatalog.html  PkCategory.html  PkDesktop.html  PkEulaRequired.html  PkMediaChangeRequired.html  PkProgress.html  PkRepoSignatureRequired.html  PkTask.html  PkTransactionPast.html  Transaction.html  api-reference.html  backend-spawn.html  backends-spawn-common.html  config-main.html  (+9 more)
pk-backend/b/etc/: Makefile.in
pk-backend/b/src/: Makefile.in  pk-marshal.h  pk-transaction.c
pk-backend/b/tools/: Makefile.in
pk-backend/gnome-packagekit/: PKGBUILD  arch.patch  autoremove.patch  disable-cancel-button.patch  filters.patch  finish-install-files.patch  gconf.patch  gnome-packagekit.install  gtk-2.28.patch  hide-icon-blocked.patch  install-local-files.patch  no-gtk-module-by-default.patch
pk-backend/packagekit/: PKGBUILD  gpacman.patch  pacman-glib.patch
vapi/: gpacman-3.3.vapi
(+33 files in other folders)
